# multi-projects

./: README.md  build.bat
projects/: CMakeLists.txt  run_vs_utf8.bat
projects/bubble_sort/: CMakeLists.txt
projects/bubble_sort/test/: test_bubble.cpp
projects/comb_bubble_sort/: CMakeLists.txt  main.cpp  run_comb_bubble_sort.bat
projects/comb_bubble_sort/src/: CMakeLists.txt
projects/comb_bubble_sort/test/: CMakeLists.txt  test_comb_bubble.cpp
projects/scl/src/: CMakeLists.txt
projects/scl/src/deque/: CMakeLists.txt  list_deque.cpp  list_deque.hpp
projects/scl/src/list/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp
projects/scl/src/logger/: CMakeLists.txt
projects/scl/src/long_number/: CmakeLists.txt  long_number.cpp  long_number.hpp
projects/scl/src/stack/: CMakeLists.txt
projects/scl/src/static_array/: CMakeLists.txt
projects/scl/src/text/: CMakeLists.txt
projects/scl/src/vector/: CMakeLists.txt  vector.cpp  vector.hpp
projects/scl/test/: CMakeLists.txt
projects/scl/test/deque/: CMakeLists.txt  run_list_deque_tests.bat  test_list_deque.cpp  test_list_deque_templates.cpp
projects/scl/test/list/: CmakeLists.txt  run_list_tests.bat  test_list.cpp  test_list_templates.cpp
projects/scl/test/long_number/: test_long_number.cpp
projects/scl/test/vector/: CmakeLists.txt  run_vector_tests.bat  test_vector.cpp  test_vector_templates.cpp
projects/unit_test/src/: comb_bubble_sort.cpp  comb_bubble_sort.hpp
projects/unit_test/test/: test_comb_bubble.cpp
projects/unit_test_example/test/: test_bubble.cpp
